RESOLVED FIXED232611
dumpAsText() tests don't get the ref-test treatment when using --self-compare-with-header
https://bugs.webkit.org/show_bug.cgi?id=232611
Summary dumpAsText() tests don't get the ref-test treatment when using --self-compare...
Tim Horton
Reported 2021-11-02 01:38:46 PDT
dumpAsText() tests don't get the ref-test treatment when using --self-compare-with-header
Attachments
Patch (8.30 KB, patch)
2021-11-02 01:39 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2021-11-02 01:39:28 PDT
EWS
Comment 2 2021-11-02 10:50:09 PDT
Committed r285168 (243804@main): <https://commits.webkit.org/243804@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 443068 [details].
Radar WebKit Bug Importer
Comment 3 2021-11-02 10:51:17 PDT
Note You need to log in before you can comment on or make changes to this bug.