dumpAsText() tests don't get the ref-test treatment when using --self-compare-with-header https://bugs.webkit.org/show_bug.cgi?id=232611

Reviewed by Jonathan Bedard.

One oversight in r285132: a test can disable pixel dumping by calling
dumpAsText(). This causes --self-compare-with-header to fall over because
it expects every test to have pixel results (and that is the whole point).

Add an un-overrideable `--force-dump-pixels` TestCommand argument,
and adopt it for self-comparison tests.

* Scripts/webkitpy/layout_tests/controllers/single_test_runner.py:
(SingleTestRunner._run_self_comparison_test):
* Scripts/webkitpy/port/driver.py:
(DriverInput.__init__):
(DriverInput.__repr__):
(Driver._command_from_driver_input):
* TestRunnerShared/TestCommand.cpp:
(WTR::parseInputLine):
* TestRunnerShared/TestCommand.h:
* WebKitTestRunner/TestController.cpp:
(WTR::TestController::runTest):
* WebKitTestRunner/TestInvocation.cpp:
(WTR::TestInvocation::dumpResults):
(WTR::TestInvocation::didReceiveSynchronousMessageFromInjectedBundle):
* WebKitTestRunner/TestInvocation.h:



Canonical link: https://commits.webkit.org/243804@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285168 268f45cc-cd09-0410-ab3c-d52691b4dbfc