Tools/WebKitTestRunner/TestController.cpp
@@ -1480,6 +1480,9 @@ bool TestController::runTest(const char* inputLine)
     if (command.shouldDumpPixels || m_shouldDumpPixelsForAllTests)
         m_currentInvocation->setIsPixelTest(command.expectedPixelHash);
 
+    if (command.forceDumpPixels)
+        m_currentInvocation->setForceDumpPixels(true);
+
     if (command.timeout > 0_s)
         m_currentInvocation->setCustomTimeout(command.timeout);
 
